welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value EAST
  setDirection(EAST)
               ^DwarfCode:7: error: not found: value WEST
  setDirection(WEST)
               ^