welcome.lessons.welcome.summative.Moria.scala.code
while (!estFaceMur()) {
  setDirection(EAST)
  while ((!estSurBiscuit()) || (!estFaceMur())) {
    avance()
  }
  prendBiscuit()
  setDirection(WEST)
  while (!estSurBiscuit()) {
    avance()
  }
  recule()
  poseBiscuit()
  retourne()
}